--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn clean test
 
       - name: Upload Allure results
-        uses: actions/upload-artifact
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results
