-Removed unnecessary waits -Added missing steps annotations -Fixed method name not reflected actual functionality -Added result Assert for Sort customers test -Removed unnecessary prints -Some asserts moved from page to test methods

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,3 +2,4 @@ wait.timeout = 10
 web.url = https://www.globalsqa.com/angularJs-protractor/BankingProject/#/manager
 page.load.timeout = 5
 browser.name = chrome
+implicitly.wait = 5
